# vv-py-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: files.py  images.py
tests/: test_datetimes.py  test_docx.py  test_duckdb_utils.py  test_duckdb_utils_consolidated.py  test_images.py  test_json_utils.py  test_pdfs.py
tests/docx_samples/: README.md  ~$demo.docx
tests/docx_samples/test_input/: README.md
tests/docx_samples/test_input/mock_tests/: README.md
tests/docx_samples/test_input/real_tests/: README.md
tests/output/test_output/: README.md
vv_py_utils/: images.py  pdfs.py
vvpyutils/: csvs.py  datetimes.py  docx.py  files.py  images.py  json_utils.py  pdfs.py  urls.py  youtube.py
vvpyutils/config/: logger.py  settings.py
vvpyutils/databases/bigquery/: utils.py
vvpyutils/databases/sqlite/: utils.py
vvpyutils/duckdb/: utils.py
vvpyutils/examples/: calendar.py
vvpyutils/google/: auth.py
vvpyutils/google/services/: calendar.py  gcs.py  service.py
vvpyutils/orm/: utils.py
vvpyutils/pydantic_ai_utils/: utils.py
vvpyutils/pydantic_ai_utils/ai_models/: __init__.py  data_models.py  models.py
