[tool.poetry]
name = "vvpyutils"
version = "0.1.0"
description = ""
authors = ["Vinoaj (Vinny) Vijeyakumaar <vinoaj@gmail.com>"]
readme = "README.md"
# packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pdf2image = "^1.17.0"
pypdf = "^5.1.0"
json-repair = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
